# django_frontend

./: .env.example  README.md  categories_fixture.json  products_fixture.json  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: add_products.html  base.html  contacts.html  header.html  home.html  product_details.html
config/: settings.py  urls.py
