[tool.poetry]
name = "django-frontend"
version = "0.1.0"
description = ""
authors = ["AnastasiaR <anastasia.romanova3169@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
